schemes data populated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,13 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activity.ResetPasswordActivity" />
         <activity android:name=".activity.SignUpActivity" />
-        <activity android:name=".activity.SplashScreenActivity" />
+        <activity android:name=".activity.SplashScreenActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
