--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.ComplaintActivity"></activity>
+        <activity android:name=".activity.ListOfSchemesActivity"></activity>
+        <activity android:name=".activity.ComplaintActivity" />
         <activity android:name=".activity.LoginAcitivity" />
         <activity
             android:name=".activity.SchemesActivity"
@@ -17,7 +18,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activity.ResetPasswordActivity" />
         <activity android:name=".activity.SignUpActivity" />
-        <activity android:name=".activity.SplashScreenActivity" >
+        <activity android:name=".activity.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
