--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,14 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Government Schemes"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.ListOfSchemesActivity"></activity>
+        <activity android:name=".activity.ListOfSchemesActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
+
         <activity android:name=".activity.ComplaintActivity" />
         <activity android:name=".activity.LoginAcitivity" />
         <activity
