--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.ListOfSchemesActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-
-        <activity android:name=".activity.ComplaintActivity" />
+        <activity android:name=".activity.SchemeDetailActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".activity.ListOfSchemesActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activity.LoginAcitivity" />
         <activity
             android:name=".activity.SchemesActivity"
