--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ciscoproject">
+    
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_demo"
         android:label="Government Schemes"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SendQueryActivity"></activity>
+        <activity android:name=".activity.BlogActivity"></activity>
+        <activity android:name=".activity.PostActivity" />
+        <activity android:name=".activity.SendQueryActivity" />
         <activity
             android:name=".activity.SchemeDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
