changes made by tanvi

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.BlogActivity"></activity>
+        <activity android:name=".activity.BlogActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".activity.PostActivity" />
-        <activity android:name=".activity.SendQueryActivity" />
+        <activity android:name=".activity.SendQueryActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".activity.SchemeDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
