--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_demo"
+        android:icon="@drawable/satya"
         android:label="Government Schemes"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
